# neat

./: .gitignore  test.sh
core/: Cargo.toml
core/src/: activation.rs  aggregations.rs  connection.rs  lib.rs  map.rs  mutations.rs  network.rs  node.rs
core/src/genome/: connection.rs  crossover.rs  gid.rs  mod.rs  node.rs
core/src/neat/: configuration.rs  mod.rs  speciation.rs
core/src/speciation/: distance.rs  mod.rs
tests/: libneat.gdextension  test.gd  test.tscn
