[package]
name = "neat-core"
version = "0.1.0"
authors = ["Stjepan Golemac <stjepan@tray.io>", "bendn <bend.n@outlook.com>"]
edition = "2018"

[dependencies]
nanoserde = "0.1.32"
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "unwind"
debug = false

[profile.dev]
panic = "unwind"
strip = true
